--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -9,7 +9,7 @@ h1 a {
 .page-header {
     background-color: #ff9400;
     margin-top: 0;
-    padding: 40px 20px 20px 40px;
+    padding: 40px 20px 40px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -54,4 +54,8 @@ h1, h2, h3, h4 {
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+}
+
+.comment {
+    margin: 20px 0px 20px 20px;
 }
