--- a/mysite/blog/templates/blog/layout.html
+++ b/mysite/blog/templates/blog/layout.html
@@ -26,7 +26,13 @@
           <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>
       </a>
+      <a href="{% url 'post_draft_list' %}" class="top-menu">Unpublished posts<span class="glyphicon glyphicon-edit"></span></a>
+      <p class="top-menu">Hello {{ user.username }} <small><a href="{% url 'logout' %}" class="btn btn-dark">Log out</a></small></p>
+      {% else %}
+        <a href="{% url 'login' %}" class="top-menu btn btn-dark">Login<span class="glyphicon glyphicon-lock"></span></a>
       {% endif %}
+
+
       
       <h1 class="display-2 text-center text-uppercase "><a href="{%url 'post_list' %}" class="text-decoration-none">Django Blog</a></h1>
     </div>
