--- a/mysite/blog/templates/blog/post_info.html
+++ b/mysite/blog/templates/blog/post_info.html
@@ -6,11 +6,35 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
+        {% else %}
+            <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-warning">Publish</a>
         {% endif %}
         {% if user.is_authenticated %}
-        <a class="btn btn-warning" href="{% url 'post_edit' pk=post.pk %}">Edit post<span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-info" href="{% url 'post_edit' pk=post.pk %}">Edit post<span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-info" href="{% url 'post_remove' pk=post.pk %}">Delete post<span class="glyphicon glyphicon-remove"></span></a>
         {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
+
+        <hr>
+        <a class="btn btn-info" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+        {% for comment in post.comments.all %}
+        {% if user.is_authenticated or comment.approved_comment %}
+            <div class="comment">
+                <div class="date">{{ comment.created_date }}</div>
+                {% if not comment.approved_comment %}
+                <a class="btn btn-info" href="{% url 'comment_remove' pk=comment.pk %}">Comment remove<span class="glyphicon glyphicon-remove"></span></a>
+                <a class="btn btn-info" href="{% url 'comment_approve' pk=comment.pk %}">Comment approve<span class="glyphicon glyphicon-ok"></span></a>
+                {% endif %}
+                <strong>{{ comment.author }}</strong>
+                <p>{{ comment.text|linebreaks }}</p>
+            </div>
+            {% endif %} 
+        {% empty %}
+        
+            <p>No comments here yet :(</p>
+        {% endfor %}
+        
+
     </div>
 {% endblock %}
